[metadata]
name = MinerUtils
version = 2.6.0
author = Nicholas Nelson & Caius Brindescu
author_email = nelsonni@oregonstate.edu
license = MIT License
description = GitHub API Access Utilities
url = https://github.com/EPICLab/miner-utils
long_description = file: README.md

[options]
packages = find:
install_requires = 
  requests
  bigjson

[options.extras_require]
tests = 
  pytest >= 3.0.3